--- a/lecturenotesclass10.Rmd
+++ b/lecturenotesclass10.Rmd
@@ -157,16 +157,29 @@ Perform a simulation to compute this empirical probability.
 
 Write down your guess to the answer before you calculate it.
 
+Probability that roll 1 squared = roll 2 should be 1/18, since first roll must 
+be 1 or 2 (1/3) and second must be square of that (1/6). The chance that the 
+absolute value of the difference is 4 should be 1/6, since for each roll 1 
+there is one roll 2 that satisfies this.
 ```{r simulate_rolls}
-
+roll_one = replicate (n = 10000, expr = sample (1:6, size = 1))
+roll_two = replicate (n = 10000, expr = sample (1:6, size = 1))
 ```
 
 ```{r identify_events}
-
+two_roll_results <- tibble(roll_one, roll_two)
+two_roll_results <- two_roll_results %>% 
+  mutate(square_match = roll_one*roll_one==roll_two, 
+         abs_match = abs(roll_one - roll_two) == 4)
 ```
 
 ```{r summarize_rolls}
-
+two_roll_results %>% 
+  count(square_match) %>% 
+  mutate(proportion = n / sum(n)) %>% print()
+two_roll_results %>% 
+  count(abs_match) %>% 
+  mutate(proportion = n / sum(n)) %>% print()
 ```
 
 ## Additional Resources-please look at before Weds.
